tests/invalid/dict_update_wrong_arg_count/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 2}
    d.update()


if __name__ == "__main__":
    run_case()
